# yasos.zig

./: .clang-format  .gitignore  .gitmodules  Dockerfile  KConfig  Kconfig  Makefile  README.md  build.zig  build.zig.zon  build_image.sh  build_ksh.sh  build_rootfs.sh  flash_rp2350.cfg  flash_rp2350_reset.cfg  hello_script.sh  hello_world.c  interface.zig  rootfs.img  test.romfs  test_runner.zig  tests.zig  yasos_shell.yaff
.github/workflows/: yasos_release.yml  yasos_smoke.yml  yasos_ut.yml
apps/: README.md  log.txt
apps/cmake/: gcc_cortex_m33.cmake  tcc_cortex_m33.cmake  tcc_host.cmake
apps/cmake/common/: arm_m.cmake  gcc_arm_m.cmake  tcc_arm_m.cmake
apps/coreutils/: .gitignore  Makefile  cat  cat.c  echo  echo.c  ls  ls.c  touch.c
apps/cowsay/: Makefile
apps/example_app/: CMakeLists.txt  main.cpp  packages.json
apps/hello_world/: Makefile  main.c
apps/hexdump/: Makefile  main.c
apps/longjump_tester/: Makefile  main.c
apps/mkfs/: Makefile  ffconf.h  mkfs_fat.c  mkfs_lfs.c  platform.c  platform.h
apps/rzsz/: Makefile  crc16.c  crc16.h  crc32.c  crc32.h  main.c  make  rz  rz_h  sz  terminal.c
apps/rzsz/zmodem/: frame.h
apps/sha/: Makefile  main.c  packet.h  terminal.c  terminal.h
apps/shell/: CMakeLists.txt  Makefile  app.diss  build.zig  build.zig.zon  disasm.txt  libc.zig  main.c  main.zig  shell  shell.c  shell.zig  yasos_shell.yaff
apps/toybox_builder/: 0001-Fixed-bugs-for-new-tcc.patch  0001-Fixed-few-bugs.patch  0001-Removed-gc-sections.patch  0001-fixed-incorrect-array-size.patch  build.sh  yasos.config
bsp/host/: board.zig
bsp/raspberry_pico/: board.zig
configs/: host_defconfig  mspc_defconfig  pimoroni_pico_plus2_and_vga_defconfig
dynamic_loader/: README.md  build.zig  build.zig.zon
dynamic_loader/elftoyaff/mkimage/: elf_parser.py  mkimage.py  relocation_set.py
dynamic_loader/source/: dependency.zig  environment.zig  executable.zig  hashtable.zig  header.zig  item_table.zig  loader.zig  module.zig  parser.zig  relocation_table.zig  section.zig  supervisor_call.zig  symbol.zig  yasld.zig
dynamic_loader/stub/: executable.zig  loader.zig  module.zig  yasld.zig
hal/: KConfig  build.zig  build.zig.zon
hal/boards/host/: KConfig  host.zig
hal/boards/mspc_v2/: KConfig  mspc_v2.zig
hal/boards/pimoroni_pico_plus2/: KConfig  pimoroni_pico_plus2.zig
hal/cortex-m3/stm32f103/: build.zig  memory.ld
hal/interface/: atomic.zig  cpu.zig  external_memory.zig  flash.zig  hal.zig  irq.zig  memory.zig  mmc.zig  time.zig  uart.zig
hal/source/: KConfig
hal/source/common/: common.zig
hal/source/ut_stub/: atomic.zig  cpu.zig  hal.zig  irq.zig  memory.zig  mmc.zig  time.zig
hal/toolchains/: arm_none_eabi_toolchain.zig
kconfiglib/: generate.py  requirements.txt
libc/: CMakeLists.txt  syscalls.c
libs/: compile_newlib.sh
libs/cmake/: cortex_m33.cmake  gcc_cortex_m33.cmake  tcc_cortex_m33.cmake
libs/cmake/common/: arm_m.cmake  gcc_arm_m.cmake  tcc_arm_m.cmake
libs/libc/: CMakeLists.txt  Makefile  errno.c  malloc.c  packages.json  path.c  semaphore.c  stdarg.c  stdio.c  string.c  syscalls.c  toolchain.cmake
libs/libc/include/: endian.h  errno.h  float.h  semaphore.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
libs/libc/include/sys/: times.h  types.h
libs/libc/src/: stdio.c
libs/libc/sys/: exec.c  termios.c  wait.c
libs/libc/tests/: Makefile  ctypes_tests.c  malloc_tests.c  minunit.h  stdio_tests.c  symbols_redefines.txt
libs/libdl/: CMakeLists.txt  Makefile  dl.c
libs/libdl/include/: dlfcn.h
libs/libm/: Makefile  math.c
libs/libm/include/: math.h
libs/pthread/: CMakeLists.txt  Makefile
libs/termcap/: Makefile  termcap.c
renode/: run_raspberry_pico.resc
rootfs/: file.txt
rootfs/subdir/dir/: test.txt
rootfs/subdir/other_dir/: b.txt
scripts/: create_disk.py  dump_decoder.py  flash_kernel_rp2350_image.cfg  make_rootfs.py  make_rootfs.zig  readyaff  readyaff.c  run_container.sh  yasld_gdb.py
source/: cimports.zig  hello_app.yaff  libc_imports.zig  main.zig  syscalls.h  tests.zig  yasos_shell.yaff
source/arch/: arch.zig  tests.zig
source/arch/arm/: process.zig
source/arch/arm-m/: arch.zig  assembly.zig  exc_return.zig  irq_handlers.zig  panic.zig  process.zig  spawn.zig  sync.zig  system_stubs.zig
source/arch/armv6-m/: arch.zig  context_switch.S  mpu.zig  registers.zig
source/arch/armv8-m/: arch.zig  context_switch.S
source/arch/host/: arch.zig  irq_handlers.zig  mpu.zig  panic.zig  process.zig
source/arch/ut/: arch.zig  hardware_process.zig  irq_handlers.zig
source/fs/: KConfig  tests.zig
source/fs/fatfs/: fatfs.zig  fatfs_directory.zig  fatfs_file.zig  fatfs_node.zig  tests.zig
source/fs/littlefs/: build.zig  errno_converter.zig  littlefs.zig  littlefs_cimport.zig  littlefs_directory.zig  littlefs_file.zig
source/fs/ramfs/: KConfig  ramfs.zig  ramfs_data.zig  ramfs_directory.zig  ramfs_directory_iterator.zig  ramfs_file.zig  ramfs_node.zig  tests.zig
source/fs/romfs/: file_header.zig  file_reader.zig  file_system_header.zig  reader.zig  romfs.zig  romfs_directory.zig  romfs_directory_iterator.zig  romfs_file.zig  romfs_node.zig  test.romfs  test_img.romfs  tests.zig
source/fs/tests/: directory_traverser.zig
source/hwinfo/: dump_hardware.zig
source/kernel/: benchmark.zig  dump_hardware.zig  errno.zig  error_messages.zig  kernel.zig  kernel_log.zig  malloc.zig  modules.zig  mutex.zig  process.zig  process_manager.zig  process_memory_pool.zig  round_robin.zig  semaphore.zig  spawn.zig  stdout.zig  syscalls.h  system_call.zig  system_stubs.zig  systick.zig  tests.zig  time.zig
source/kernel/drivers/: block_device.zig  driverfs.zig  driverfs_iterator.zig  drivers.zig  i_block_device.zig  idriver.zig  tests.zig
source/log/: kernel_log.zig
tests/smoke/: .gitignore  cd_test.py  conftest.py  ls_test.py  mkfs_fat_test.py  prepare.sh  ps_test.py  requirements.txt  reset_target.sh  run_tests.sh  session_example.py  shell_test.py  tcc_suite_test.py  tcc_test.py  tcc_test_suite.py
tools/: linker_script_generator.zig
(+125 files in other folders)
